# sanD-hacks-2025

./: .env  .gitignore  Makefile  README.md  SIMPLIFIED_ARCHITECTURE.md  SIMPLIFIED_FLOW_DIAGRAM.md  TESTING_NEWS.md  docker-compose.yaml
coffeeAgntcy/: .gitignore  CHANGELOG.md  README.md  (+6 more)
coffeeAgntcy/coffeeAGNTCY/coffee_agents/corto/: .env.example  .pylintrc  README.md  corto_dashboard.json  docker-compose.yaml  pyproject.toml  pytest.ini
coffeeAgntcy/coffeeAGNTCY/coffee_agents/corto/common/: llm.py  version.py
coffeeAgntcy/coffeeAGNTCY/coffee_agents/corto/config/: config.py  logging_config.py
coffeeAgntcy/coffeeAGNTCY/coffee_agents/corto/config/docker/otel/: otel-collector-config.yaml
coffeeAgntcy/coffeeAGNTCY/coffee_agents/corto/deployment/helm/corto-ui/: Chart.yaml  values.yaml
coffeeAgntcy/coffeeAGNTCY/coffee_agents/corto/deployment/helm/exchange/: Chart.yaml  values.yaml
coffeeAgntcy/coffeeAGNTCY/coffee_agents/corto/deployment/helm/farm/: Chart.yaml  values.yaml
coffeeAgntcy/coffeeAGNTCY/coffee_agents/corto/deployment/helm/local-cluster/: Chart.yaml  Makefile  config-overrides.yaml.gotmpl  helmfile.yaml  kind-config.yaml  values.yaml
coffeeAgntcy/coffeeAGNTCY/coffee_agents/corto/docker/: Dockerfile.exchange  Dockerfile.farm  Dockerfile.ui  README.md
coffeeAgntcy/coffeeAGNTCY/coffee_agents/corto/exchange/: agent.py  main.py  suggested_prompts.json
coffeeAgntcy/coffeeAGNTCY/coffee_agents/corto/exchange/frontend/: index.html  package-lock.json  package.json
coffeeAgntcy/coffeeAGNTCY/coffee_agents/corto/exchange/frontend/src/: App.tsx  index.css
coffeeAgntcy/coffeeAGNTCY/coffee_agents/corto/farm/: agent.py
coffeeAgntcy/coffeeAGNTCY/coffee_agents/corto/tests/: README.md
coffeeAgntcy/coffeeAGNTCY/coffee_agents/corto/tests/integration/: conftest.py  docker_helpers.py  process_helper.py  prompt_cases.json  test_sommelier.py
coffeeAgntcy/coffeeAGNTCY/coffee_agents/lungo/: .env.example  docker-compose.yaml  lungo_dashboard.json  pyproject.toml
coffeeAgntcy/coffeeAGNTCY/coffee_agents/lungo/agents/: exceptions.py
coffeeAgntcy/coffeeAGNTCY/coffee_agents/lungo/agents/mcp_servers/: payment_service.py  weather_service.py
coffeeAgntcy/coffeeAGNTCY/coffee_agents/lungo/common/: chat_lite_llm_shim.py  litellm_oauth2_openai_provider.py  llm.py  logistics_states.py
coffeeAgntcy/coffeeAGNTCY/coffee_agents/lungo/config/: config.py
coffeeAgntcy/coffeeAGNTCY/coffee_agents/lungo/docker/: Dockerfile.brazil-farm  Dockerfile.colombia-farm  Dockerfile.logistics-accountant  Dockerfile.logistics-farm  Dockerfile.logistics-helpdesk  Dockerfile.logistics-shipper  Dockerfile.logistics-supervisor  Dockerfile.payment-mcp  Dockerfile.ui  Dockerfile.weather-mcp  README.md
coffeeAgntcy/coffeeAGNTCY/coffee_agents/lungo/docs/: Farm_Agent.md  agent_directory_integration.md  identity_integration.md
coffeeAgntcy/coffeeAGNTCY/coffee_agents/lungo/frontend/: .prettierignore  .prettierrc  tsconfig.node.json  vite.config.ts
coffeeAgntcy/coffeeAGNTCY/coffee_agents/lungo/frontend/src/: index.css
coffeeAgntcy/coffeeAGNTCY/coffee_agents/lungo/oasf_records/: Colombia_Coffee_Farm.json  Logistics_Helpdesk.json  Shipping_agent.json  Tatooine_Farm_agent.json  Vietnam_Coffee_Farm.json
coffeeAgntcy/coffeeAGNTCY/coffee_agents/lungo/scripts/: publish_agent_records.py  publish_agent_records.sh
coffeeAgntcy/coffeeAGNTCY/coffee_agents/lungo/services/: models.py
coffeeAgntcy/coffeeAGNTCY/coffee_agents/lungo/tests/: README.md
coffeeAgntcy/coffeeAGNTCY/coffee_agents/lungo/tests/integration/: conftest.py  logistics_prompt_cases.json  process_helper.py  test_auction.py  test_logistics_accountant.py  test_logistics_farm.py  test_logistics_helpdesk.py  test_logistics_shipper.py  test_logistics_supervisor.py
(+208 files in other folders)
